fixed radial gradient on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -113,9 +113,11 @@ main {
   main {
     background:
   /* oben links – Lichtquelle */
-      radial-gradient(
-        1300px 700px at -30% 0%,
-        /* rgba(255, 255, 255, 1) 53%, */ rgba(210, 228, 255, 0.1) 55%
+      rradial-gradient(
+        2600px 1400px at -10% -20%,
+        rgba(255, 255, 255, 1) 53%,
+
+        rgba(210, 228, 255, 0.1) 55%
       ),
       #f7faff;
 
